# duck

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: commit-check.yml  test.yml
docs/: GITHUB_TOKEN_SETUP.md
scripts/: check_and_notify.sh  generate_email.py
src/duck/: __init__.py  cli.py  core.py  models.py
templates/: commit-reminder.html
tests/: __init__.py  test_cli.py  test_core.py  test_generate_email.py  test_scripts.py
