[project]
name = "duck"
version = "0.3.0"
description = "DUCK (Did U Commit mr.Kim?) - A GitHub activity checker for daily commits and PRs."
authors = [
    {name = "Alan Synn", email = "alan@alansynn.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0,<3.0",
    "toml>=0.10.2"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
duck = "duck.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.ruff]
line-length = 168
target-version = "py39"
extend-exclude = ["tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "C90", "B", "A", "COM", "D", "T20", "SIM", "TID", "PT", "Q", "N", "ERA", "RUF"
]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "B008",
    "SIM108",
    "COM812"
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
